--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,4 +60,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: virajj/cpsy-350-ci:lates
+          tags: virajj/cpsy-350-ci:latest
